--- a/index.html
+++ b/index.html
@@ -1097,8 +1097,8 @@
       <div class="container hero-inner">
         <div>
           <div class="hero-kicker-row">
-            <div class="hero-kicker">Paneles en tiempo real</div>
-            <div class="hero-badge">Apoyamos la toma de decisiones</div>
+            <div class="hero-kicker">Paneles on line</div>
+            <!-- <div class="hero-badge">Apoyamos la toma de decisiones</div>-->
           </div>
           <h1 class="hero-title">
             <span>CXDIP</span> conecta CX, sucursales y ventas en un solo panel.
@@ -1107,7 +1107,7 @@
             Una vista limpia y <strong>profunda</strong> de alta dirección. Combina: operaciones y CX con un mismo idioma y en tiempo real con vista Mobile.
           </p>
           <div class="hero-tags">
-            <span class="hero-tag">CX &amp; NPS</span>
+            <span class="hero-tag">CX &amp; Loyalty</span>
             <span class="hero-tag">Locales/sucursales</span>
             <span class="hero-tag">Fuerza de venta</span>
             <span class="hero-tag">Gestión de filas</span>
@@ -1121,7 +1121,7 @@
           </div>
 
           <div class="hero-note">
-            Actualización casi en tiempo real, sin tableros eternos ni reportes incomprensibles.
+           Y da el paso a una vista eficiente, que te permita gestionar y controlar
           </div>
         </div>
 
