--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
     <section class="trust-strip">
       <div class="container trust-inner">
         <div>
-          Diseñado para compañías de <strong>servicios en Paraguay</strong> que quieren llevar la gestión del CX al siguiente nivel.
+          Diseñado para compañías de <strong>servicios y Retails</strong> que quieren llevar la gestión del CX al siguiente nivel.
         </div>
         <div class="trust-tags">
           <span class="tag-pill">Banca &amp; Finanzas</span>
@@ -1202,7 +1202,7 @@
         <div class="panel-gallery">
           <!-- PANEL 1: NPS -->
           <div class="panel-card">
-            <h3 class="panel-title">Panel NPS</h3>
+            <h3 class="panel-title">Panel CX Loyalty</h3>
             <div class="panel-mockup panel-mockup--nps">
               <div class="nps-chart">
                 <div class="nps-axis-x"></div>
@@ -1245,10 +1245,10 @@
               </div>
             </div>
             <div class="panel-tags">
-              <span>NPS relacional</span>
-              <span>/ NPS transaccional</span>
+              <span>Loyalty relacional</span>
+              <span>/ Loyalty transaccional</span>
               <span>/ Motivos claves</span>
-              <span>/ Versión Mobile</span>
+              <!--<span>/ Versión Mobile</span>-->
             </div>
           </div>
 
@@ -1264,7 +1264,7 @@
                     <div class="map-dot"></div>
                   </div>
                   <details class="map-bubble">
-                    <summary class="map-label">NPS 78</summary>
+                    <summary class="map-label">Loyalty 78</summary>
                     <div class="map-drivers">
                       <span>33% Rapidez en caja</span>
                       <span>10% Amabilidad del equipo</span>
@@ -1278,7 +1278,7 @@
                     <div class="map-dot map-dot--alert"></div>
                   </div>
                   <details class="map-bubble">
-                    <summary class="map-label">NPS 42</summary>
+                    <summary class="map-label">Loyalty 42</summary>
                     <div class="map-drivers">
                       <span>70% Tiempos de espera altos</span>
                       <span>5% Problemas en resolución</span>
@@ -1291,7 +1291,7 @@
                     <div class="map-dot"></div>
                   </div>
                   <details class="map-bubble">
-                    <summary class="map-label">NPS 65</summary>
+                    <summary class="map-label">Loyalty 65</summary>
                     <div class="map-drivers">
                       <span>65% Buena experiencia digital</span>
                       <span>23% Horarios convenientes</span>
@@ -1329,7 +1329,7 @@
                     <span class="report-bar"></span>
                   </div>
                   <div class="report-line">
-                    <span>NPS sucursales en riesgo</span>
+                    <span>Loyalty sucursales en riesgo</span>
                     <span class="report-bar"></span>
                   </div>
                   <div class="report-line">
@@ -1348,7 +1348,7 @@
                 </div>
               </details>
               <div class="panel-caption">
-                NPS, Conversión, Productividad.
+                Loyalty, Conversión, Productividad.
               </div>
             </div>
             <div class="panel-tags">
@@ -1374,7 +1374,7 @@
         <div class="steps">
           <div class="step-card">
             <div class="step-number">01 · Generamos &amp; Conectamos la data</div>
-            <h3 class="step-title">Implementamos NPS y conectamos lo que tienes</h3>
+            <h3 class="step-title">Implementamos CX Loyalty y conectamos lo que tienes</h3>
             <p class="step-text">
               Creamos encuestas, te apoyamos con reclamos, ventas y datos básicos de operación. No necesitas una revolución tecnológica.
             </p>
