--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
           </div>
 
           <div class="hero-note">
-           Y da el paso a una vista eficiente, que te permita gestionar y controlar
+          da el paso a una vista eficiente, que te permita gestionar y controlar
           </div>
         </div>
 
