--- a/index.html
+++ b/index.html
@@ -1410,7 +1410,7 @@
           </div>
           <div>
             <ul class="why-list">
-              <li>Paneles pensados para la realidad de Paraguay.</li>
+              <li>Paneles pensados para la realidad de LATAM</li>
               <li>Mirada combinada de clientes, locales y ventas.</li>
               <li>Acompañamiento cercano para armar el panel y usarlo de verdad.</li>
             </ul>
