--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>CXDIP — Paneles en tiempo real para CX, sucursales y ventas</title>
+  <title>CXDIP — Paneles On Line de lealtad y satisfacción, sucursales y ventas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
