--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
           </div>
 
           <div class="hero-note">
-          da el paso a una vista eficiente, que te permita gestionar y controlar
+          Da el paso a una vista eficiente, que te permita gestionar y controlar
           </div>
         </div>
 
