--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
     <section class="trust-strip">
       <div class="container trust-inner">
         <div>
-          Diseñado para compañías de <strong>servicios y Retails</strong> que quieren llevar la gestión del CX al siguiente nivel.
+          Diseñado para compañías de <strong>servicios y retails</strong> que quieren llevar la gestión del CX al siguiente nivel.
         </div>
         <div class="trust-tags">
           <span class="tag-pill">Banca &amp; Finanzas</span>
