--- a/demo_nps.html
+++ b/demo_nps.html
@@ -359,15 +359,13 @@
           <div class="hero-left">
             <div class="pill">
               Panel Loyalty 2025
-              <span>Encuesta relacional</span>
+             <!--  <span>Encuesta relacional</span>-->
             </div>
             <h1>
-              <span class="brand">CXDIP</span> condensa Loyalty, esfuerzo, fuga e
-              intención de compra en una sola vista.
+              <span class="brand">CXDIP</span> Loyalty 360°
             </h1>
             <p>
-              Datos ficticios de una encuesta relacional realizada mensualmente entre
-              enero y diciembre 2025 a la cartera de clientes retail.
+              Lealtad 2024 - 2025, Retail Enterprise.
             </p>
             <div class="hero-meta">
               <span>Universo: clientes activos retail</span>
@@ -507,7 +505,7 @@
       </main>
 
       <footer>
-        Demo interna CXDIP · Panel Loyalty 2025 · <span id="year"></span>
+       Demo 2025 <span id="year"></span>
       </footer>
     </div>
   </div>
