--- a/Clasificacion_de_texto.html
+++ b/Clasificacion_de_texto.html
@@ -268,6 +268,39 @@
       color: var(--text-muted);
     }
 
+    /* Cabeceras ordenables */
+    th.sortable-col {
+      cursor: pointer;
+      user-select: none;
+    }
+
+    .sort-label {
+      display: inline-flex;
+      align-items: center;
+      gap: 4px;
+      justify-content: flex-end;
+      width: 100%;
+    }
+
+    .sort-indicator {
+      font-size: 0.65rem;
+      opacity: 0.5;
+    }
+
+    /* Scroll vertical interno para rankings */
+    .table-wrapper-ranking {
+      max-height: 170px;
+      overflow-y: auto;
+      position: relative;
+    }
+
+    .table-wrapper-ranking thead th {
+      position: sticky;
+      top: 0;
+      background: #f9fafb;
+      z-index: 1;
+    }
+
     /* ------- Ajustes para MOBILE ------- */
     @media (max-width: 768px) {
       .page {
@@ -347,14 +380,34 @@
       </div>
 
       <div class="table-wrapper">
-        <table>
+        <table id="drivers-table">
           <thead>
             <tr>
               <th>Driver macro</th>
-              <th style="text-align:right;">N° comentarios</th>
-              <th style="text-align:right;">% sobre texto</th>
-              <th style="text-align:right;">CSAT atributo</th>
-              <th style="text-align:right;">Uplift atributo</th>
+              <th class="sortable-col" data-sort-type="int" style="text-align:right;">
+                <span class="sort-label">
+                  N° comentarios
+                  <span class="sort-indicator">↕</span>
+                </span>
+              </th>
+              <th class="sortable-col" data-sort-type="percent" style="text-align:right;">
+                <span class="sort-label">
+                  % sobre texto
+                  <span class="sort-indicator">↕</span>
+                </span>
+              </th>
+              <th class="sortable-col" data-sort-type="decimal" style="text-align:right;">
+                <span class="sort-label">
+                  CSAT atributo
+                  <span class="sort-indicator">↕</span>
+                </span>
+              </th>
+              <th class="sortable-col" data-sort-type="decimal" style="text-align:right;">
+                <span class="sort-label">
+                  Uplift atributo
+                  <span class="sort-indicator">↕</span>
+                </span>
+              </th>
             </tr>
           </thead>
           <tbody>
@@ -430,9 +483,7 @@
               <td class="tbl-name">Promedios</td>
               <td class="tbl-num">–</td>
               <td class="tbl-num">–</td>
-              <!-- CSAT promedio ~ 4,10 (ejemplo) -->
               <td class="tbl-num val-csat neutral">4,10</td>
-              <!-- Uplift promedio ~ 0,00 -->
               <td class="tbl-num val-uplift neutral">0,00</td>
             </tr>
           </tbody>
@@ -448,15 +499,35 @@
             Evolución del CSAT por driver entre periodos (ejemplo con 3 periodos + total).
           </div>
 
-          <div class="table-wrapper">
-            <table>
+          <div class="table-wrapper table-wrapper-ranking">
+            <table class="ranking-table ranking-csat">
               <thead>
                 <tr>
                   <th>Driver</th>
-                  <th style="text-align:right;">Periodo 1</th>
-                  <th style="text-align:right;">Periodo 2</th>
-                  <th style="text-align:right;">Periodo 3</th>
-                  <th style="text-align:right;">Periodo total</th>
+                  <th class="sortable-col" data-sort-type="decimal" style="text-align:right;">
+                    <span class="sort-label">
+                      Periodo 1
+                      <span class="sort-indicator">↕</span>
+                    </span>
+                  </th>
+                  <th class="sortable-col" data-sort-type="decimal" style="text-align:right;">
+                    <span class="sort-label">
+                      Periodo 2
+                      <span class="sort-indicator">↕</span>
+                    </span>
+                  </th>
+                  <th class="sortable-col" data-sort-type="decimal" style="text-align:right;">
+                    <span class="sort-label">
+                      Periodo 3
+                      <span class="sort-indicator">↕</span>
+                    </span>
+                  </th>
+                  <th class="sortable-col" data-sort-type="decimal" style="text-align:right;">
+                    <span class="sort-label">
+                      Periodo total
+                      <span class="sort-indicator">↕</span>
+                    </span>
+                  </th>
                 </tr>
               </thead>
               <tbody>
@@ -488,6 +559,7 @@
                   <td class="tbl-num val-csat neg">3,20</td>
                   <td class="tbl-num val-csat neg">3,10</td>
                 </tr>
+                <!-- Puedes agregar más drivers y aparecerán con scroll -->
               </tbody>
             </table>
           </div>
@@ -500,15 +572,35 @@
             Uplift del atributo vs CSAT global (4,10) por periodo y total.
           </div>
 
-          <div class="table-wrapper">
-            <table>
+          <div class="table-wrapper table-wrapper-ranking">
+            <table class="ranking-table ranking-uplift">
               <thead>
                 <tr>
                   <th>Driver</th>
-                  <th style="text-align:right;">Periodo 1</th>
-                  <th style="text-align:right;">Periodo 2</th>
-                  <th style="text-align:right;">Periodo 3</th>
-                  <th style="text-align:right;">Periodo total</th>
+                  <th class="sortable-col" data-sort-type="decimal" style="text-align:right;">
+                    <span class="sort-label">
+                      Periodo 1
+                      <span class="sort-indicator">↕</span>
+                    </span>
+                  </th>
+                  <th class="sortable-col" data-sort-type="decimal" style="text-align:right;">
+                    <span class="sort-label">
+                      Periodo 2
+                      <span class="sort-indicator">↕</span>
+                    </span>
+                  </th>
+                  <th class="sortable-col" data-sort-type="decimal" style="text-align:right;">
+                    <span class="sort-label">
+                      Periodo 3
+                      <span class="sort-indicator">↕</span>
+                    </span>
+                  </th>
+                  <th class="sortable-col" data-sort-type="decimal" style="text-align:right;">
+                    <span class="sort-label">
+                      Periodo total
+                      <span class="sort-indicator">↕</span>
+                    </span>
+                  </th>
                 </tr>
               </thead>
               <tbody>
@@ -540,6 +632,7 @@
                   <td class="tbl-num val-uplift neg">-0,90</td>
                   <td class="tbl-num val-uplift neg">-1,00</td>
                 </tr>
+                <!-- Más drivers aquí si quieres -->
               </tbody>
             </table>
           </div>
@@ -677,6 +770,147 @@
         this.setAttribute('data-expanded', expanded ? 'false' : 'true');
       });
     });
+
+    // Función auxiliar para parsear valores numéricos
+    function parseCellValue(text, type) {
+      if (!text) return null;
+      text = text.trim();
+      if (text === '–' || text === '-') return null;
+
+      text = text.replace(/\s/g, '');
+
+      if (type === 'int') {
+        var cleanedInt = text.replace(/\./g, '');
+        var intVal = parseInt(cleanedInt, 10);
+        return isNaN(intVal) ? null : intVal;
+      }
+
+      if (type === 'percent') {
+        var cleanedPct = text.replace('%', '').replace(/\./g, '').replace(',', '.');
+        var pctVal = parseFloat(cleanedPct);
+        return isNaN(pctVal) ? null : pctVal;
+      }
+
+      if (type === 'decimal') {
+        var cleanedDec = text
+          .replace('+', '')
+          .replace('–', '-')
+          .replace(',', '.');
+        var decVal = parseFloat(cleanedDec);
+        return isNaN(decVal) ? null : decVal;
+      }
+
+      return null;
+    }
+
+    // Ordenar tabla Drivers Macro
+    (function() {
+      var table = document.getElementById('drivers-table');
+      if (!table) return;
+
+      var tbody = table.querySelector('tbody');
+      var totalRow = tbody.querySelector('.row-total');
+      var promRow = tbody.querySelector('.row-prom');
+
+      table.querySelectorAll('thead th.sortable-col').forEach(function(th) {
+        th.dataset.sortDirection = 'none';
+
+        th.addEventListener('click', function() {
+          var sortType = th.dataset.sortType || 'decimal';
+          var colIndex = Array.prototype.indexOf.call(th.parentNode.children, th);
+          var current = th.dataset.sortDirection;
+          var next = current === 'asc' ? 'desc' : 'asc';
+          th.dataset.sortDirection = next;
+          var direction = next === 'asc' ? 1 : -1;
+
+          // reset en otros headers
+          table.querySelectorAll('thead th.sortable-col').forEach(function(other) {
+            if (other !== th) {
+              other.dataset.sortDirection = 'none';
+              var iconOther = other.querySelector('.sort-indicator');
+              if (iconOther) iconOther.textContent = '↕';
+            }
+          });
+
+          var icon = th.querySelector('.sort-indicator');
+          if (icon) icon.textContent = next === 'asc' ? '▲' : '▼';
+
+          // filas sin Totales/Promedios
+          var dataRows = Array.from(tbody.querySelectorAll('tr')).filter(function(row) {
+            return !row.classList.contains('row-total') && !row.classList.contains('row-prom');
+          });
+
+          dataRows.sort(function(rowA, rowB) {
+            var textA = rowA.children[colIndex].textContent;
+            var textB = rowB.children[colIndex].textContent;
+            var valA = parseCellValue(textA, sortType);
+            var valB = parseCellValue(textB, sortType);
+
+            if (valA === null && valB === null) return 0;
+            if (valA === null) return 1;
+            if (valB === null) return -1;
+
+            return (valA - valB) * direction;
+          });
+
+          tbody.innerHTML = '';
+          dataRows.forEach(function(r) { tbody.appendChild(r); });
+          if (totalRow) tbody.appendChild(totalRow);
+          if (promRow) tbody.appendChild(promRow);
+        });
+      });
+    })();
+
+    // Ordenar tablas de Ranking (CSAT y Uplift)
+    (function() {
+      var rankingTables = document.querySelectorAll('.ranking-table');
+      rankingTables.forEach(function(table) {
+        var tbody = table.querySelector('tbody');
+
+        table.querySelectorAll('thead th.sortable-col').forEach(function(th) {
+          th.dataset.sortDirection = 'none';
+
+          th.addEventListener('click', function() {
+            var sortType = th.dataset.sortType || 'decimal';
+            var colIndex = Array.prototype.indexOf.call(th.parentNode.children, th);
+            var current = th.dataset.sortDirection;
+            var next = current === 'asc' ? 'desc' : 'asc';
+            th.dataset.sortDirection = next;
+            var direction = next === 'asc' ? 1 : -1;
+
+            // reset en otros headers de ESTA tabla
+            table.querySelectorAll('thead th.sortable-col').forEach(function(other) {
+              if (other !== th) {
+                other.dataset.sortDirection = 'none';
+                var iconOther = other.querySelector('.sort-indicator');
+                if (iconOther) iconOther.textContent = '↕';
+              }
+            });
+
+            var icon = th.querySelector('.sort-indicator');
+            if (icon) icon.textContent = next === 'asc' ? '▲' : '▼';
+
+            var dataRows = Array.from(tbody.querySelectorAll('tr'));
+
+            dataRows.sort(function(rowA, rowB) {
+              var textA = rowA.children[colIndex].textContent;
+              var textB = rowB.children[colIndex].textContent;
+              var valA = parseCellValue(textA, sortType);
+              var valB = parseCellValue(textB, sortType);
+
+              if (valA === null && valB === null) return 0;
+              if (valA === null) return 1;
+              if (valB === null) return -1;
+
+              return (valA - valB) * direction;
+            });
+
+            tbody.innerHTML = '';
+            dataRows.forEach(function(r) { tbody.appendChild(r); });
+          });
+        });
+      });
+    })();
   </script>
 </body>
 </html>
